# Zefir

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Djipi/: Djipi.h  GameConfig.h  UserEvents.h
Djipi/core/: DjipiSystem.h  GameObject.cpp  GameObject.h  Log.h  Window.cpp
Djipi/core/math/: Vector2.cpp  Vector2.h
Djipi/core/renderer/: Renderer.cpp  Renderer.h
Djipi/core/resource/: Resource.h  ResourceManager.cpp  ResourceManager.h  Sound.h  Texture.cpp  Texture.h
Djipi/core/resource/types/: Font.cpp  Font.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h
Djipi/core/scene/: GameObject.cpp  GameObject.h  Transform2D.h
Djipi/core/sound/: SoundManager.cpp  SoundManager.h
Djipi/core/window/: Window.cpp  Window.h
Djipi/utils/: Collision.cpp  Collision.h  GameObject.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Transform.h  Window.cpp  Window.h
Djipi/utils/collision/: Collision.cpp  Collision.h
Djipi/utils/debug/: Log.h
Djipi/utils/math/: Vector2.h
Djipi/utils/text/: TextRendering.cpp  TextRendering.h
PhysicsSandbox/: CMakeLists.txt
PhysicsSandbox/src/: App.cpp  App.h  Main.cpp  Player.cpp  Player.h  UserEvents.h
PhysicsSandbox/src/gameobjects/: Ground.h  PhysicObject.cpp  PhysicObject.h
PhysicsSandbox/src/scenes/: DefaultScene.h
Sandbox/: CMakeLists.txt
Sandbox/cmake/: SDL_copy.cmake
Sandbox/src/: App.cpp  App.h  GameConfig.h  Ground.h  Main.cpp  Player.cpp  Player.h
Sandbox/src/gameobjects/: Player.cpp  Player.h
Sandbox/src/scenes/: DefaultScene.h  DefaultScene2.h
Zefir/: CMakeLists.txt  GameConfig.h  Zefir.h
Zefir/cmake/: FindDependencies.cmake  SDL.cmake  box2D.cmake  imgui.cmake  json.cmake
Zefir/core/: Engine.h  EngineContext.h  EngineEvents.h
Zefir/core/app/: Application.cpp  Application.h
Zefir/core/debug/: ImGuiManager.cpp  ImGuiManager.h  Log.h  ProfilingData.h
Zefir/core/debug/zefir-debug-ui/: CameraFrame.h  DebugUI.h  LogFrame.h  PerformanceFrame.h  ResourcesFrame.h  SimulationControlFrame.h
Zefir/core/math/: Vector2.cpp  Vector2.h
Zefir/core/physics/: BoxCollider.h  CircleCollider.h  PhysicsEngine.h  PhysicsWorld.h  Rigidbody2D.h
Zefir/core/renderer/: Renderer.cpp  Renderer.h
Zefir/core/resource/: Resource.h  ResourceManager.cpp  ResourceManager.h
Zefir/core/resource/types/: AnimatedTexture.cpp  AnimatedTexture.h  Font.cpp  Font.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h
Zefir/core/resource/types/meta/: AnimationMeta.h
Zefir/core/scene/: GameObject.cpp  GameObject.h  Transform2D.h
Zefir/core/sound/: SoundManager.cpp  SoundManager.h
Zefir/core/time/: Timer.cpp  Timer.h
Zefir/core/window/: Window.cpp  Window.h  WindowSettings.h
Zefir/physics/: BoxCollider.h  CircleCollider.h  Colliders.h  PhysicsWorld.h
Zefir/physics/custom-engine/: PhysicsWorld.h  Rigidbody2D.h
Zefir/renderer/: Renderer.cpp  Renderer.h  UnitConversion.h
Zefir/renderer/text/: TextRendering.cpp  TextRendering.h
Zefir/resource/: IResource.h  ResourceManager.cpp  ResourceManager.h
Zefir/resource/types/: AnimatedTexture.cpp  AnimatedTexture.h  Font.cpp  Font.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h
Zefir/resource/types/meta/: AnimationMeta.h  IParser.h
Zefir/scene/: Camera.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform2D.h
Zefir/scene/UI/: UIObject.h  UIText.cpp  UIText.h
Zefir/sound/: SoundManager.cpp  SoundManager.h
Zefir/utils/collision/: Collision.cpp  Collision.h
Zefir/utils/debug/: ZefirAssert.h
Zefir/utils/math/: Vector2.cpp
Zefir/utils/text/: TextRendering.cpp  TextRendering.h
Zefir/utils/time/: Timer.cpp  Timer.h
include/: GameConfig.h
src/: App.cpp  EntryPoint.cpp  Ground.h  Player.cpp  Player.h  TestVector2.h
